# Kairos

./: .dups.toml  .gitattributes  .gitignore  .jscpd.json  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/skills/code-dedup/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: trellis-check.toml  trellis-implement.toml  trellis-research.toml
.opencode/skills/kairos-frontend/: SKILL.md
.trellis/: .gitignore  .template-hashes.json
.trellis/scripts/: setup_platform_links.py
.trellis/spec/backend/: comment-guidelines.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md  (+1 more)
public/: app-icon-manifest.json
scripts/: android-debug.sh  android-dev.sh  android-hmr.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: importers.rs  lib.rs  main.rs  schedule.rs  timer.rs
src-tauri/src/commands/: courses.rs  exams.rs  mod.rs  notifications.rs  pomodoro.rs  schedule.rs  sync.rs  tasks.rs
src-tauri/src/db/: courses.rs  exams.rs  migrations.rs  mod.rs  models.rs  notifications.rs  pomodoro.rs  sync.rs  tasks.rs
src-tauri/src/notifications/: exam_scheduler.rs  ids.rs  mod.rs  pomodoro_scheduler.rs
src-tauri/src/sync/: exporter.rs  ids.rs  mod.rs  webdav.rs
src/hooks/: use-theme.ts
src/providers/: FluentProvider.tsx
src/types/: course-import.ts  course.ts  exam.ts  notification.ts  pomodoro.ts  schedule.ts  sync.ts  task.ts
(+67 files in other folders)
